cabal-version:  2.4
name:           unary-scheduling
version:        0.1.0.0
synopsis:       Scheduling constraint solving on a unary resource.
category:       Scheduling, Timetabling
license:        BSD-3-Clause
build-type:     Simple
author:         Sam Derbyshire
maintainer:     Sam Derbyshire
copyright:      2020-2026 Sam Derbyshire
homepage:       https://github.com/sheaf/unary-scheduling
bug-reports:    https://github.com/sheaf/unary-scheduling/issues
description:
  Scheduling constraint solving on a unary resource.

common common

  build-depends:
      base
        >= 4.11     && < 5.0
    , containers
        >= 0.6.2.1  && < 0.9
    , deepseq
        >= 1.4.4.0  && < 1.6
    , generic-lens
        >= 1.2.0.1  && < 2.0.0.0
    , lens
        >= 4.19.2   && < 5.4
    , mtl
        >= 2.2.2    && < 2.4
    , text
        >= 2.0      && < 2.3
    , transformers
        >= 0.5.6.2  && < 0.7
    , vector
        >= 0.13.0   && < 0.14

  default-language:
    Haskell2010

  default-extensions:
    BangPatterns
    BlockArguments
    ConstraintKinds
    DataKinds
    DeriveAnyClass
    DeriveGeneric
    DerivingStrategies
    DerivingVia
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GADTs
    GeneralizedNewtypeDeriving
    InstanceSigs
    LambdaCase
    MagicHash
    NamedFieldPuns
    NamedWildCards
    OverloadedStrings
    PartialTypeSignatures
    PatternSynonyms
    PolyKinds
    QuantifiedConstraints
    RankNTypes
    RecordWildCards
    StandaloneDeriving
    TypeApplications
    TypeFamilyDependencies
    TypeOperators

  ghc-options:
    -O2
    -fspecialise-aggressively
    -fexpose-all-unfoldings
    -Wall
    -Wcompat
    -fwarn-missing-local-signatures
    -fwarn-incomplete-uni-patterns
    -fwarn-missing-deriving-strategies
    -fno-warn-unticked-promoted-constructors

flag viz
  description:
    Include visualisation functions (useful for debugging).
  default:
    True
  manual:
    False

library

  import: common

  hs-source-dirs:
      src

  exposed-modules:
      Data.Lattice
    , Data.Sequence.Insert
    , Data.Vector.Generic.Index
    , Data.Vector.PhaseTransition
    , Data.Vector.Ranking
    , Schedule.Constraint
    , Schedule.Contention
    , Schedule.Interval
    , Schedule.Monad
    , Schedule.Ordering
    , Schedule.Propagators
    , Schedule.Search
    , Schedule.Task
    , Schedule.Time
    , Schedule.Tree

  build-depends:
      acts
        ^>= 0.3.0.0
    , bitvec
         >= 1.0.3.0  && < 1.2
    , constraints
         >= 0.12     && < 0.15
    , constraints-extras
         >= 0.3.0.2  && < 0.5
    , dependent-map
        ^>= 0.4.0.0
    , dependent-sum
         >= 0.7.0.0  && < 0.8
    , fingertree
         >= 0.1.4.2  && < 0.2
    , generic-data
         >= 0.8.3.0  && < 1.2
    , groups
         >= 0.4.0.0  && < 0.6
    , primitive
         >= 0.7.0.0  && < 0.10
    , some
         >= 1.0.1    && < 1.2

  if flag(viz)
    build-depends:
        algebraic-graphs
           >= 0.5 && < 0.9
      , tree-view
          ^>= 0.5
    cpp-options:
      -DVIZ

executable schedule-spreadsheet

  import: common

  hs-source-dirs:
      examples/spreadsheet/src
    , examples/spreadsheet/app

  other-modules:
      Schedule.Spreadsheet
    , Schedule.Z3

  main-is:
    Main.hs

  build-depends:
      unary-scheduling
    , prettyprinter
         >= 1.7       && < 1.8
    , attoparsec
         >= 0.13.2.4  && < 0.15
    , bytestring
         >= 0.10.10.0 && < 0.13
    , directory
        ^>= 1.3.6.0
    , filepath
         >= 1.4.2.1   && < 1.6
    , optparse-applicative
         >= 0.18.0.0  && < 0.20
    , time
         >= 1.9.3     && < 1.17
    , xlsx
         >= 1.2.0     && < 1.3
    , z3
         >= 411       && < 413

  ghc-options:
    -threaded

test-suite unary-scheduling-test

  import: common

  type:
    exitcode-stdio-1.0

  hs-source-dirs:
    test

  main-is:
    Main.hs

  other-modules:
    Schedule.Test

  build-depends:
      unary-scheduling
    , tasty
        >= 1.4   && < 1.6
    , tasty-hunit
        >= 0.10  && < 0.11
