cabal-version:  2.4
name:           unary-scheduling
version:        0.1.0.0
synopsis:       Scheduling constraint solving on a unary resource.
category:       Scheduling, Timetabling
license:        BSD-3-Clause
build-type:     Simple
author:         Sam Derbyshire
maintainer:     Sam Derbyshire
copyright:      2020-2026 Sam Derbyshire
homepage:       https://github.com/sheaf/unary-scheduling
bug-reports:    https://github.com/sheaf/unary-scheduling/issues
description:
  Scheduling constraint solving on a unary resource.

common common

  build-depends:
      base
        >= 4.11     && < 5.0
    , code-page
        >= 0.2.1    && < 0.3
    , containers
        >= 0.6.2.1  && < 0.9
    , deepseq
        >= 1.4.4.0  && < 1.6
    , generic-lens
        >= 1.2.0.1  && < 2.0.0.0
    , lens
        >= 4.19.2   && < 5.4
    , mtl
        >= 2.2.2    && < 2.4
    , text
        >= 2.0      && < 2.3
    , transformers
        >= 0.5.6.2  && < 0.7
    , vector
        >= 0.13.0   && < 0.14

  default-language:
    Haskell2010

  default-extensions:
    BangPatterns
    BlockArguments
    ConstraintKinds
    DataKinds
    DeriveAnyClass
    DeriveGeneric
    DerivingStrategies
    DerivingVia
    DuplicateRecordFields
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GADTs
    GeneralizedNewtypeDeriving
    InstanceSigs
    LambdaCase
    LexicalNegation
    MagicHash
    MultiWayIf
    NamedFieldPuns
    NamedWildCards
    NumericUnderscores
    OverloadedStrings
    PartialTypeSignatures
    PatternSynonyms
    PolyKinds
    QuantifiedConstraints
    RankNTypes
    RecordWildCards
    RoleAnnotations
    StandaloneDeriving
    StandaloneKindSignatures
    TypeApplications
    TypeAbstractions
    TypeFamilyDependencies
    TypeOperators
    UnboxedSums
    UnboxedTuples

  ghc-options:
    -O2
    -fspecialise-aggressively
    -fexpose-overloaded-unfoldings
    -fpolymorphic-specialisation
    -Wall
    -Wcompat
    -fwarn-missing-local-signatures
    -fwarn-incomplete-uni-patterns
    -fwarn-missing-deriving-strategies
    -fno-warn-unticked-promoted-constructors

flag viz
  description:
    Include visualisation functions (useful for debugging).
  default:
    True
  manual:
    False

flag debug
  description:
    Enable runtime assertions and bounds-checking inside this library.
  default:
    False
  manual:
    True

library

  import: common

  hs-source-dirs:
      src

  exposed-modules:
      Data.Lattice
    , Data.Sequence.Insert
    , Data.Vector.Ranking
    , SAT.Base
    , SAT.Clause
    , SAT.Restart
    , SAT.Solver
    , SAT.VarOrder
    , Schedule.Constraint
    , Schedule.Contention
    , Schedule.Interval
    , Schedule.LCG.Atoms
    , Schedule.LCG.FDS
    , Schedule.LCG.Search
    , Schedule.LCG.Theory
    , Schedule.Monad
    , Schedule.Monitor
    , Schedule.Ordering
    , Schedule.Precedence
    , Schedule.Propagators
    , Schedule.Task
    , Schedule.Time
    , Schedule.Trail
    , Schedule.Tree

  build-depends:
      acts
        ^>= 0.3.0.0
    , bitvec
         >= 1.0.3.0  && < 1.2
    , constraints
         >= 0.12     && < 0.15
    , constraints-extras
         >= 0.3.0.2  && < 0.5
    , dependent-map
        ^>= 0.4.0.0
    , dependent-sum
         >= 0.7.0.0  && < 0.8
    , fingertree
         >= 0.1.4.2  && < 0.2
    , generic-data
         >= 0.8.3.0  && < 1.2
    , groups
         >= 0.4.0.0  && < 0.6
    , memory-arena
        ^>= 0.1.0.0
    , primitive
         >= 0.7.0.0  && < 0.10
    , some
         >= 1.0.1    && < 1.2

  if flag(viz)
    build-depends:
        algebraic-graphs
           >= 0.5 && < 0.9
      , tree-view
          ^>= 0.5
    cpp-options:
      -DVIZ

  if flag(debug)
    cpp-options:
      -DDEBUG

library z3-oracle

  import: common

  hs-source-dirs:
    oracles/z3

  exposed-modules:
    Schedule.Z3

  build-depends:
      unary-scheduling
    , z3
         >= 411       && < 413

library minizinc-oracle

  import: common

  hs-source-dirs:
    oracles/minizinc

  exposed-modules:
    Schedule.MiniZinc

  build-depends:
      unary-scheduling
    , directory
        ^>= 1.3.6.0
    , process
         >= 1.6.9.0   && < 1.7

executable schedule-spreadsheet

  import: common

  hs-source-dirs:
      spreadsheet/src
    , spreadsheet/app

  other-modules:
      Schedule.Spreadsheet

  main-is:
    Main.hs

  build-depends:
      unary-scheduling
    , z3-oracle
    , prettyprinter
         >= 1.7       && < 1.8
    , attoparsec
         >= 0.13.2.4  && < 0.15
    , bytestring
         >= 0.10.10.0 && < 0.13
    , directory
        ^>= 1.3.6.0
    , filepath
         >= 1.4.2.1   && < 1.6
    , optparse-applicative
         >= 0.18.0.0  && < 0.20
    , time
         >= 1.9.3     && < 1.17
    , xlsx
         >= 1.2.0     && < 1.3

  ghc-options:
    -threaded

test-suite sanity-tests

  import: common

  type:
    exitcode-stdio-1.0

  hs-source-dirs:
    test/sanity

  main-is:
    Main.hs

  other-modules:
    Schedule.Test

  build-depends:
      unary-scheduling
    , tasty
        >= 1.4   && < 1.6
    , tasty-hunit
        >= 0.10  && < 0.11

test-suite test-sat-solver

  import: common

  type:
    exitcode-stdio-1.0

  hs-source-dirs:
    test/sat

  main-is:
    Main.hs

  other-modules:
      SAT.Test

  build-depends:
      unary-scheduling
    , tasty
        >= 1.4   && < 1.6
    , tasty-hedgehog
        >= 1.4   && < 1.5
    , hedgehog
        >= 1.2   && < 1.8
    , z3
         >= 411  && < 413

test-suite test-scheduling

  import: common

  type:
    exitcode-stdio-1.0

  hs-source-dirs:
    test/scheduling

  main-is:
    Main.hs

  other-modules:
      Schedule.Z3.Test

  build-depends:
      unary-scheduling
    , z3-oracle
    , tasty
        >= 1.4   && < 1.6
    , tasty-hedgehog
        >= 1.4   && < 1.5
    , hedgehog
        >= 1.2   && < 1.8

benchmark bench-sat-solver

  import: common

  type:
    exitcode-stdio-1.0

  hs-source-dirs:
    bench/sat

  main-is:
    Main.hs

  other-modules:
      SAT.Bench
    , SAT.Bench.Instances

  build-depends:
      unary-scheduling
    , random
         >= 1.2   && < 1.4
    , tasty
         >= 1.4   && < 1.6
    , tasty-bench
         >= 0.5   && < 0.6

  ghc-options:
    -threaded

library scheduling-bench-instances

  import: common

  hs-source-dirs:
    bench/instances

  exposed-modules:
    Schedule.Bench.Instances

  build-depends:
      unary-scheduling
    , random
         >= 1.2   && < 1.4

benchmark bench-scheduling

  import: common

  type:
    exitcode-stdio-1.0

  hs-source-dirs:
    bench/scheduling

  main-is:
    Main.hs

  other-modules:
      Schedule.Bench

  build-depends:
      unary-scheduling
    , scheduling-bench-instances
    , z3-oracle
    , minizinc-oracle
    , tasty
        >= 1.4   && < 1.6
    , tasty-bench
        >= 0.5   && < 0.6

  ghc-options:
    -threaded

flag inspect-dumps
  description:
    Add GHC dump flags to the 'inspect-unary-scheduling' executable
  default:
    False
  manual:
    True

executable inspect-unary-scheduling

  import: common

  hs-source-dirs:
    inspect

  main-is:
    Main.hs

  build-depends:
      unary-scheduling
    , scheduling-bench-instances
    , minizinc-oracle

  if flag(inspect-dumps)
    ghc-options:
      -ddump-simpl
      -ddump-stg-final
      -ddump-to-file
